tests/success/repeat.avm
; test repeat
push int8(1)
rep 5 ; equ to push int(8) 5 time
hdump ; must have 6 * int8(1) on stack
add
rep 4 ; equ to mul 5 time
hdump ; must have 6 on stack
assert int8(6)
exit
