tests/fail/test_overflow.avm
push int8(10)
rep 100
hdump
mul
rep 50
hdump
exit
;;
